--- a/vignettes/Chapter14Solutions.Rmd
+++ b/vignettes/Chapter14Solutions.Rmd
@@ -165,13 +165,13 @@ plotenvelope(ft_wind, which=1:3, sim.method="stand.norm")
 
 *Do assumptions seem reasonable? In particular, think about whether there is evidence that the counts are overdispersed compared to the Poisson.*
 
-Things generally look OK, but there is a weird downward kink on the scale-location plot, weakly suggestive of under-dispersion. This could be a weird artifact though so let's repeat using `"refit"`, but with a smaller value of `n.sim` so it doesn't take too long:
+Things generally look OK, but there is a weird downward kink on the scale-location plot, weakly suggestive of under-dispersion. Note the sim envelope was constructed using `"stand.norm"`, meaning we compared the smoother to what would be expected for a bunch of standard normal residuals. But the kink could be a weird artifact of the model being fitted (which has loads of parameters) so let's repeat using `"refit"`, but with a smaller value of `n.sim` so it doesn't take too long:
 ```{r ex14.6refit, fig.width=9, fig.height=3.3, warning=FALSE}
 par(mfrow=c(1,3),mar=c(3,3,1,1),mgp=c(1.75,0.75,0))
 plotenvelope(ft_wind, which=1:3, n.sim=39)
 ```
 
-So the weird kink in the scale-location plot happened in simulated data too, so it is nothing really to worry about. It seems to be an artifact, probably because of overfitting of the data by including a `Station` term in the model means that there is a parameter for every two observations in the data!. (If a random effect were used instead, this effect would have been weaker. But it isn't really a problem)
+So the weird kink in the scale-location plot happened in simulated data too, so it is nothing really to worry about. It seems to be an artifact, probably because of overfitting of the data by including a `Station` term in the model -- this means that there is a parameter for every two observations in the data! (If a random effect were used instead, this effect would have been weaker. But it isn't really a problem)
 
 
 ## Code Box 14.4: A manyglm analysis of the revegetation data, using a
@@ -322,7 +322,7 @@ sum(sortedWindStats$x[1:2])/an_wind1$table[4,3]
 So 63\% of the `Zone:Year` effect is just these two species.
 
 *Plot the abundance of each potential indicator species against Zone and Year.*
-```{r ex14.8plot}
+```{r ex14.8plot,fig.width=5,fig.height=8}
 plot(windMV1~interaction(windFarms$X$Zone,windFarms$X$Year),var.subset=sortedWindStats$ix[1:4])
 ```
 
