--- a/vignettes/Chapter15Solutions.Rmd
+++ b/vignettes/Chapter15Solutions.Rmd
@@ -42,8 +42,8 @@ windFt_Train=manyglm(windMV[isTest==FALSE,]~Year+Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
 windFt_Int_Train=manyglm(windMV[isTest==FALSE,]~Year*Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
-prWind_Test = predict(windFt_Train,newdata=windFarms$X[isTest,], type="response")
-prWind_Int_Test = predict(windFt_Int_Train, newdata=windFarms$X[isTest,], type="response")
+prWind_Test = predict.manyglm(windFt_Train,newdata=windFarms$X[isTest,], type="response")
+prWind_Int_Test = predict.manyglm(windFt_Int_Train, newdata=windFarms$X[isTest,], type="response")
 predLogL = dpois(windMV[isTest,],lambda=prWind_Test,log=TRUE)
 predLogL_Int = dpois(windMV[isTest,],lambda=prWind_Int_Test,log=TRUE)
 c(sum(predLogL),sum(predLogL_Int))
@@ -65,8 +65,8 @@ windFt_TrainRare=manyglm(windMVnotRare[isTest==FALSE,]~Year+Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
 windFt_Int_TrainRare=manyglm(windMVnotRare[isTest==FALSE,]~Year*Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
-prWind_TestRare = predict(windFt_TrainRare,newdata=windFarms$X[isTest,], type="response")
-prWind_Int_TestRare = predict(windFt_Int_TrainRare, newdata=windFarms$X[isTest,], type="response")
+prWind_TestRare = predict.manyglm(windFt_TrainRare,newdata=windFarms$X[isTest,], type="response")
+prWind_Int_TestRare = predict.manyglm(windFt_Int_TrainRare, newdata=windFarms$X[isTest,], type="response")
 predLogLRare = dpois(windMVnotRare[isTest,],lambda=prWind_TestRare,log=TRUE)
 predLogL_IntRare = dpois(windMVnotRare[isTest,],lambda=prWind_Int_TestRare,log=TRUE)
 c(sum(predLogLRare),sum(predLogL_IntRare))
@@ -87,8 +87,8 @@ windFt_Train=manyglm(windMV[isTest==FALSE,]~Year+Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
 windFt_Int_Train=manyglm(windMV[isTest==FALSE,]~Year*Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
-prWind_Test = predict(windFt_Train,newdata=windFarms$X[isTest,], type="response")
-prWind_Int_Test = predict(windFt_Int_Train, newdata=windFarms$X[isTest,], type="response")
+prWind_Test = predict.manyglm(windFt_Train,newdata=windFarms$X[isTest,], type="response")
+prWind_Int_Test = predict.manyglm(windFt_Int_Train, newdata=windFarms$X[isTest,], type="response")
 predLogL = dpois(windMV[isTest,],lambda=prWind_Test,log=TRUE)
 predLogL_Int = dpois(windMV[isTest,],lambda=prWind_Int_Test,log=TRUE)
 c(sum(predLogL),sum(predLogL_Int))
@@ -97,8 +97,8 @@ windFt_TrainRare=manyglm(windMVnotRare[isTest==FALSE,]~Year+Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
 windFt_Int_TrainRare=manyglm(windMVnotRare[isTest==FALSE,]~Year*Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
-prWind_TestRare = predict(windFt_TrainRare,newdata=windFarms$X[isTest,], type="response")
-prWind_Int_TestRare = predict(windFt_Int_TrainRare, newdata=windFarms$X[isTest,], type="response")
+prWind_TestRare = predict.manyglm(windFt_TrainRare,newdata=windFarms$X[isTest,], type="response")
+prWind_Int_TestRare = predict.manyglm(windFt_Int_TrainRare, newdata=windFarms$X[isTest,], type="response")
 predLogLRare = dpois(windMVnotRare[isTest,],lambda=prWind_TestRare,log=TRUE)
 predLogL_IntRare = dpois(windMVnotRare[isTest,],lambda=prWind_Int_TestRare,log=TRUE)
 c(sum(predLogLRare),sum(predLogL_IntRare))
@@ -115,8 +115,8 @@ windFt_Train=manyglm(windMV[isTest==FALSE,]~Year+Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
 windFt_Int_Train=manyglm(windMV[isTest==FALSE,]~Year*Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
-prWind_Test = predict(windFt_Train,newdata=windFarms$X[isTest,], type="response")
-prWind_Int_Test = predict(windFt_Int_Train, newdata=windFarms$X[isTest,], type="response")
+prWind_Test = predict.manyglm(windFt_Train,newdata=windFarms$X[isTest,], type="response")
+prWind_Int_Test = predict.manyglm(windFt_Int_Train, newdata=windFarms$X[isTest,], type="response")
 predLogL = dpois(windMV[isTest,],lambda=prWind_Test,log=TRUE)
 predLogL_Int = dpois(windMV[isTest,],lambda=prWind_Int_Test,log=TRUE)
 c(sum(predLogL),sum(predLogL_Int))
@@ -125,8 +125,8 @@ windFt_TrainRare=manyglm(windMVnotRare[isTest==FALSE,]~Year+Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
 windFt_Int_TrainRare=manyglm(windMVnotRare[isTest==FALSE,]~Year*Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
-prWind_TestRare = predict(windFt_TrainRare,newdata=windFarms$X[isTest,], type="response")
-prWind_Int_TestRare = predict(windFt_Int_TrainRare, newdata=windFarms$X[isTest,], type="response")
+prWind_TestRare = predict.manyglm(windFt_TrainRare,newdata=windFarms$X[isTest,], type="response")
+prWind_Int_TestRare = predict.manyglm(windFt_Int_TrainRare, newdata=windFarms$X[isTest,], type="response")
 predLogLRare = dpois(windMVnotRare[isTest,],lambda=prWind_TestRare,log=TRUE)
 predLogL_IntRare = dpois(windMVnotRare[isTest,],lambda=prWind_Int_TestRare,log=TRUE)
 c(sum(predLogLRare),sum(predLogL_IntRare))
@@ -144,8 +144,8 @@ windFt_Train=manyglm(windMV[isTest==FALSE,]~Year+Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
 windFt_Int_Train=manyglm(windMV[isTest==FALSE,]~Year*Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
-prWind_Test = predict(windFt_Train,newdata=windFarms$X[isTest,], type="response")
-prWind_Int_Test = predict(windFt_Int_Train, newdata=windFarms$X[isTest,], type="response")
+prWind_Test = predict.manyglm(windFt_Train,newdata=windFarms$X[isTest,], type="response")
+prWind_Int_Test = predict.manyglm(windFt_Int_Train, newdata=windFarms$X[isTest,], type="response")
 predLogL = dpois(windMV[isTest,],lambda=prWind_Test,log=TRUE)
 predLogL_Int = dpois(windMV[isTest,],lambda=prWind_Int_Test,log=TRUE)
 c(sum(predLogL),sum(predLogL_Int))
@@ -154,8 +154,8 @@ windFt_TrainRare=manyglm(windMVnotRare[isTest==FALSE,]~Year+Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
 windFt_Int_TrainRare=manyglm(windMVnotRare[isTest==FALSE,]~Year*Zone,
       data=windFarms$X[isTest==FALSE,],family="poisson")
-prWind_TestRare = predict(windFt_TrainRare,newdata=windFarms$X[isTest,], type="response")
-prWind_Int_TestRare = predict(windFt_Int_TrainRare, newdata=windFarms$X[isTest,], type="response")
+prWind_TestRare = predict.manyglm(windFt_TrainRare,newdata=windFarms$X[isTest,], type="response")
+prWind_Int_TestRare = predict.manyglm(windFt_Int_TrainRare, newdata=windFarms$X[isTest,], type="response")
 predLogLRare = dpois(windMVnotRare[isTest,],lambda=prWind_TestRare,log=TRUE)
 predLogL_IntRare = dpois(windMVnotRare[isTest,],lambda=prWind_Int_TestRare,log=TRUE)
 c(sum(predLogLRare),sum(predLogL_IntRare))
